<resources>
    <string name="app_name">Air Qualtiy</string>
    <string name="pollution">شاخص آلودگی</string>
    <string name="tv_quality">سالم</string>
    <string name="tv_less_than_5_mic">ذرات معلق کمتر از ۵ میکرون</string>
    <string name="tv_less_than_25_mic">ذرات معلق کمتر از ۲۵ میکرون</string>
    <string name="tv_city_name">تهران</string>
    <string name="tv_quality_percent">80</string>
    <string name="tv_temp_percent">25</string>
    <string name="tv_pressure_percent">1015</string>
    <string name="tv_pm15_number_percent">34</string>
    <string name="tv_pm25_number_percent">142</string>
    <string name="btn_search_text">جستجو</string>
</resources>
