<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.ftm.airqualtiy.MainActivity">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_header"
            android:layout_width="match_parent"

            android:layout_height="200dp"
            android:background="@drawable/header_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/tv_index_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pollution"
                android:textColor="#F3EDED"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_weather_index" />

            <TextView
                android:id="@+id/tv_weather_quality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/tv_quality"
                android:textColor="#ffffff"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/pb_search"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:progressTint="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@+id/tv_weather_quality"
                android:visibility="gone"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_city" />

            <TextView
                android:id="@+id/tv_weather_index"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_quality_percent"
                android:textColor="#ffffff"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_weather_quality" />

            <ImageView
                android:id="@+id/btn_search_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_search_black_24dp" />

            <ImageView
                android:id="@+id/img_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_refresh" />

            <TextView
                android:id="@+id/tv_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:text="@string/tv_city_name"
                android:textColor="#F8FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/tv_pm5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/tv_less_than_5_mic"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_pressure" />

        <ProgressBar
            android:id="@+id/progressBar_less_15"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:progress="10"
            android:progressTint="@color/colorBlueGreen"
            app:layout_constraintBottom_toBottomOf="@+id/tv_pm10_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_pm10_number"
            app:layout_constraintTop_toTopOf="@+id/tv_pm10_number">

        </ProgressBar>

        <TextView
            android:id="@+id/tv_pm10_number"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:ems="10"
            android:text="@string/tv_pm15_number_percent"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/progressBar_less_15"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_pm5" />


        <TextView
            android:id="@+id/tv_pm25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:text="@string/tv_less_than_25_mic"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_pm10_number" />

        <ProgressBar
            android:id="@+id/progressBar_less_25"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:progress="65"
            android:progressTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/tv_pm25_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_pm25_number"
            app:layout_constraintTop_toTopOf="@+id/tv_pm25_number">

        </ProgressBar>

        <TextView
            android:id="@+id/tv_pm25_number"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:ems="10"
            android:text="@string/tv_pm25_number_percent"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/progressBar_less_25"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_pm25" />

        <ImageView
            android:id="@+id/img_temp"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="48dp"
            android:tint="@color/colorGreen"
            app:layout_constraintEnd_toStartOf="@+id/tv_temp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout_header"
            app:srcCompat="@drawable/ic_temp" />

        <TextView
            android:id="@+id/tv_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/tv_temp_percent"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_temp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/img_temp"
            app:layout_constraintTop_toTopOf="@+id/img_temp" />

        <ImageView
            android:id="@+id/img_pressure"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="48dp"
            android:tint="@color/colorBlueGreen"
            app:layout_constraintEnd_toStartOf="@+id/tv_pressure"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_temp"
            app:srcCompat="@drawable/ic_pressure" />

        <TextView
            android:id="@+id/tv_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/tv_pressure_percent"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_pressure"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/img_pressure"
            app:layout_constraintTop_toTopOf="@+id/img_pressure" />


        <RelativeLayout
            android:id="@+id/rl_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true" />

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/ll_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/et_search"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:padding="5dp"
                android:background="@drawable/edittext_bg" />

            <Button
                android:id="@+id/btn_search"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:background="@drawable/search_bg"
                android:layout_marginTop="0dp"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:text="@string/btn_search_text" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>